apps/team-beta/hello-app/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-app
  namespace: team-beta
spec:
  selector:
    app: hello-app
  ports:
    - port: 80
      targetPort: 5678
